examples/test/testpolicy15806.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15806
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key40: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value27
          key6: value35
      podSelector:
        matchLabels:
          key46: value26
          key39: value5
